--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
 <div class="footer-padding"></div>
   <div class="footer">
     <p>Made with ❤️ by Sujanram B    <br>
-       Contact : 
+       Contact : sujanram0@gmail.com
     <a href="https://github.com/Sujanram" class="fa fa-github"></a>
     <a href="https://www.linkedin.com/in/sujanram-b-798216192/" class="fa fa-linkedin"></a>
     <a href="https://www.instagram.com/sujanram_b/" class="fa fa-instagram"></a>
